# cdt-cloud-blueprint

./: .dockerignore  .gitignore  .gitpod.yml  Dockerfile  Dockerfile.dev  Jenkinsfile  NOTICE.md  PUBLISHING.md  README.md  browser.Dockerfile  lerna.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  theia_update.md
.github/workflows/: build.yml  publish-builder-img.yml  publish-image.yml  publish-theia-ide-img.yml
applications/browser/: package.json  tsconfig.json  webpack.config.js
applications/docker/: package.json  webpack.config.js
applications/electron/: electron-builder.yml  package.json  tsconfig.json  webpack.config.js
configs/: verdaccio.config.yaml
dockerfile/: Dockerfile
next/: Jenkinsfile
releng/promote/: Jenkinsfile
scripts/: theia-standalone-browser-app.ts  tracecompass-server-download.ts  tracecompass-server.ts
theia-extensions/blueprint-example-generator/: package.json  tsconfig.json
theia-extensions/blueprint-examples/: package.json
theia-extensions/blueprint-examples/resources/cmake-example/: CMAKE_EXAMPLE_README.md  CMakeLists.txt
theia-extensions/blueprint-examples/resources/cmake-example/src/: Rectangle.cpp
theia-extensions/launcher/: package.json
theia-extensions/product/: package.json
theia-extensions/theia-blueprint-launcher/: package.json
theia-extensions/theia-blueprint-product/: package.json
theia-extensions/theia-blueprint-updater/: package.json
theia-extensions/updater/: package.json
(+108 files in other folders)
